--- a/src/components/Contact/style.css
+++ b/src/components/Contact/style.css
@@ -1,3 +1,5 @@
+@import "../../index.css";
+
 .contact {
   text-align: start;
   margin-top: 2rem;
@@ -6,7 +8,7 @@
 
 .contact-title-text {
   text-align: left;
-  font-family: "Francois One", sans-serif;
+  font-family: var(--ff-francois-one);
   line-height: 110%;
   font-size: 5rem;
 }
@@ -17,7 +19,7 @@
   margin-top: 2rem;
   padding-inline-start: 2rem;
   text-align: start;
-  font-family: "Space mono", monospace;
+  font-family: var(--ff-space-grotesk);
   font-size: 1.2rem;
 }
 
