--- a/src/components/Hero/style.css
+++ b/src/components/Hero/style.css
@@ -1,3 +1,5 @@
+@import "../../index.css";
+
 main {
   height: calc(100vh - 70px);
   display: flex;
@@ -8,14 +10,14 @@ main {
 }
 
 .hero-title {
-  font-family: "Francois One", sans-serif;
+  font-family: var(--ff-francois-one);
   font-size: 3rem;
   line-height: 100%;
 }
 
 .hero-body {
   text-align: left;
-  font-family: "Space Mono", monospace;
+  font-family: var(--ff-space-mono);
   font-size: 1.4rem;
   line-height: 100%;
 }
