--- a/src/components/Projects/style.css
+++ b/src/components/Projects/style.css
@@ -1,3 +1,5 @@
+@import "../../index.css";
+
 .projects-title {
   text-align: left;
   margin-top: 2rem;
@@ -8,7 +10,7 @@
 .projects-title-text {
   text-align: left;
   margin: 1rem 3rem 0 3rem;
-  font-family: "Francois One", sans-serif;
+  font-family: var(--ff-francois-one);
   line-height: 110%;
   font-size: 5rem;
 }
@@ -24,9 +26,9 @@
   flex-direction: column;
   flex-wrap: wrap;
   justify-content: center;
-  font-family: "Space Mono", monospace;
-  font-size: 1.1rem;
-  font-weight: bold;
+  font-family: var(--ff-space-grotesk);
+  font-size: 1.05rem;
+  font-weight: 500;
 }
 
 .project-item-list-left {
@@ -64,13 +66,17 @@
   font: weight 300;
 }
 
+.project-description > a {
+  align-self: center;
+}
+
 .projects-more {
   padding: 0.4rem 1.6rem;
   background-color: white;
   color: black;
   border: 1px black solid;
   border-radius: 12px;
-  font-family: "Space Mono", monospace;
+  font-family: var(--ff-space-grotesk);
   font-weight: 700;
   cursor: pointer;
   transition: all ease 0.3s;
