--- a/src/index.css
+++ b/src/index.css
@@ -1,19 +1,14 @@
+@import url("https://fonts.googleapis.com/css2?family=Francois+One&family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Space+Grotesk:wght@300;400;500;600;700&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap");
+
+:root {
+  --ff-francois-one: "Francois One", sans-serif;
+  --ff-space-mono: "Space Mono", monospace;
+  --ff-space-grotesk: "Space Grotesk", sans-serif;
+  --ff-ibm-plex-sans: "IBM Plex Sans", sans-serif;
+  --ff-ibm-plex-mono: "IBM Plex Mono", monospace;
+}
+
 * {
   scroll-behavior: smooth;
   transition: all ease 0.2s;
-}
-
-body {
-  margin: 0;
-  padding: 0.8rem;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
 }
